--- a/src/_includes/base-new.njk
+++ b/src/_includes/base-new.njk
@@ -31,7 +31,10 @@
       notifyOpen: false
     }">
     <div class="relative z-10 bg-white" >
+    {%- if environment === 'production' -%}
     {%- include "partials/banner.njk" -%}
+    {%- endif -%}
+
     {%- include "partials/header-new.njk" -%}
     {%- block content -%}{%- endblock -%}
     {%- include "partials/footer.njk" -%}
