--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -1,71 +1,75 @@
 {# Notifications #}
-<aside class="relative" x-data="{ newNotifications: true }">
-  <div class="max-w-screen-xl mx-auto sm:w-[90%] relative">
+<aside class="grid grid-cols-layout" x-data="{ newNotifications: true }">
+  <div class="relative col-full sm:col-wide">
     <div class="absolute w-full sm:right-0 z-40 mb-10 bg-white rounded-b-lg shadow-xl sm:ml-auto sm:max-w-xl top-full inset-x-0 sm:inset-x-auto sm:max-h-[80vh]" x-bind:class="!notifyOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
-      <div class="px-6">
+      <div class="px-clamp-gap sm:px-6">
         <p class="grid pt-5 pb-4" x-on:click="newNotifications = !newNotifications">
           <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
           <span class="text-2xl font-semibold">Isac Norland</span>
         </p>
         <p class="border-t border-gray-200">
-          <a href="#" class="flex items-center gap-2 py-4 -mt-px fine:hover:-mx-6 fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+          <a href="#" class="flex items-center gap-2 py-3 -mt-px text-lg text-blue-500 fine:hover:-mx-clamppx-clamp-gap fine:hover:px-clamp-gap sm:fine:hover:-mx-6 sm:fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
             {{ '/src/_includes/svg/icons/user.svg' | svgContents() | safe }}
             <span>Min side</span>
           </a>
         </p>
       </div>
-      <div class="bg-gray-100 p-6 max-h-[55vh] overflow-y-auto overscroll-contain fancy-scroll shadow-inner" x-show="newNotifications">
-        <h2 class="text-lg font-semibold">Varsler</h2>
-        <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
-        <div class="grid gap-1 mt-2">
-          {%- for task in notifications.myTasks -%}
-            <a class="grid gap-1 px-4 py-3 bg-white rounded-lg fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
-              <h3 class="text-lg font-semibold leading-snug">{{ task.title | safe }}</h3>
-              <p class="text-base opacity-80">{{ task.timestamp }}</p>
-              <div class="flex items-center justify-between mt-2">
-                <div class="flex flex-wrap gap-1">
-                  <span class="grid w-6 h-6 text-white bg-orange-600 rounded place-items-center">
-                    {{ '/src/_includes/svg/icons/tasks-filled.svg' | svgContents('w-4 h-4') | safe }}
-                  </span>
-                  {%- for tag in task.tags -%}
-                    <span class="px-2 text-gray-700 leading-none py-1.5 text-sm rounded {{ tag.color or "bg-gray-100" }}">{{ tag.title | safe }}</span>
-                  {%- endfor -%}
-                </div>
-                {{ '/src/_includes/svg/icons/chevron-right.svg' | svgContents('opacity-50 w-5 h-5') | safe }}
-              </div>
-            </a>
-          {%- endfor -%}
-        </div>
-
-        <h3 class="mt-6 text-sm tracking-wider uppercase opacity-80">Beskjeder</h3>
-        <div class="grid gap-1 mt-2">
-          {%- for message in notifications.myMessages -%}
-            <a class="px-4 py-3 bg-white rounded-md fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
-              <div>
-                <h3 class="text-lg font-semibold leading-snug">{{ message.title | safe }}</h3>
-                <p class="text-base opacity-80">{{ message.timestamp }}</p>
-
-                {%- if message.tags -%}
-                  <div class="flex items-center justify-between pb-1 mt-2">
-                    <div class="flex flex-wrap gap-1">
-                      <span class="grid w-6 h-6 text-white rounded bg-lightblue-600 place-items-center">
-                        {{ '/src/_includes/svg/icons/chat-filled.svg' | svgContents('w-4 h-4') | safe }}
-                      </span>
-                      {%- for tag in message.tags -%}
-                        <span class="px-2 text-gray-700 leading-none py-1.5 text-sm rounded {{ tag.color or "bg-gray-100" }}">{{ tag }}</span>
-                      {%- endfor -%}
-                    </div>
+      <div class="bg-gray-100 border-b relative border-gray-200 border-t max-h-[55vh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
+        <div class="sticky inset-x-0 top-0 h-3 -mb-4 bg-gradient-to-b from-gray-100 to-transparent"></div>
+        <div class="py-4 px-clamp-gap sm:p-6">
+          <h2 class="text-lg font-semibold">Varsler</h2>
+          <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
+          <div class="grid gap-1 mt-2">
+            {%- for task in notifications.myTasks -%}
+              <a class="grid gap-1 py-3 bg-white rounded-lg px-clamp-gap fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+                <h3 class="text-lg font-semibold leading-snug">{{ task.title | safe }}</h3>
+                <p class="text-base opacity-80">{{ task.timestamp }}</p>
+                <div class="flex items-center justify-between mt-2">
+                  <div class="flex flex-wrap gap-1">
+                    <span class="grid w-6 h-6 text-white bg-orange-600 rounded place-items-center">
+                      {{ '/src/_includes/svg/icons/tasks-filled.svg' | svgContents('w-4 h-4') | safe }}
+                    </span>
+                    {%- for tag in task.tags -%}
+                      <span class="px-2 text-gray-700 leading-none py-1.5 text-sm rounded {{ tag.color or "bg-gray-100" }}">{{ tag.title | safe }}</span>
+                    {%- endfor -%}
                   </div>
-                {%- endif -%}
+                  {{ '/src/_includes/svg/icons/chevron-right.svg' | svgContents('opacity-50 w-5 h-5') | safe }}
+                </div>
+              </a>
+            {%- endfor -%}
+          </div>
 
-              </div>
-            </a>
-          {%- endfor -%}
+          <h3 class="mt-6 text-sm tracking-wider uppercase opacity-80">Beskjeder</h3>
+          <div class="grid gap-1 mt-2">
+            {%- for message in notifications.myMessages -%}
+              <a class="py-3 bg-white rounded-md px-clamp-gap fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+                <div>
+                  <h3 class="text-lg font-semibold leading-snug">{{ message.title | safe }}</h3>
+                  <p class="text-base opacity-80">{{ message.timestamp }}</p>
+
+                  {%- if message.tags -%}
+                    <div class="flex items-center justify-between pb-1 mt-2">
+                      <div class="flex flex-wrap gap-1">
+                        <span class="grid w-6 h-6 text-white rounded bg-lightblue-600 place-items-center">
+                          {{ '/src/_includes/svg/icons/chat-filled.svg' | svgContents('w-4 h-4') | safe }}
+                        </span>
+                        {%- for tag in message.tags -%}
+                          <span class="px-2 text-gray-700 leading-none py-1.5 text-sm rounded {{ tag.color or "bg-gray-100" }}">{{ tag }}</span>
+                        {%- endfor -%}
+                      </div>
+                    </div>
+                  {%- endif -%}
+
+                </div>
+              </a>
+            {%- endfor -%}
+          </div>
         </div>
+        <div class="sticky inset-x-0 bottom-0 h-3 -mt-4 bg-gradient-to-t from-gray-100 to-transparent"></div>
       </div>
-      <div class="px-6">
+      <div class="px-clamp-gap sm:px-6">
         <div x-show="!newNotifications" class="border-t border-gray-200"></div>
-        <a href="#" class="flex items-center gap-2 py-4 rounded-b-lg fine:hover:-mx-6 fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+        <a href="#" class="flex items-center gap-2 py-3 text-lg text-blue-500 rounded-b-lg fine:hover:-mx-clamppx-clamp-gap fine:hover:px-clamp-gap sm:fine:hover:-mx-6 sm:fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
           {{ '/src/_includes/svg/icons/logout.svg' | svgContents() | safe }}
           <span>Logg ut</span>
         </a>
