--- a/src/_includes/base-new.njk
+++ b/src/_includes/base-new.njk
@@ -28,7 +28,8 @@
       indexOpen: false,
       audienceDropdownOpen: false,
       menuOpen: false,
-      notifyOpen: false
+      notifyOpen: false,
+      newNotifications: true
     }">
     <div class="relative z-10 bg-white" >
     {%- if environment === 'production' -%}
