--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -1,5 +1,5 @@
 {# Notifications #}
-<aside class="grid grid-cols-layout" x-data="{ newNotifications: true }">
+<aside class="grid grid-cols-layout">
   <div class="relative col-full sm:col-wide">
     <div class="absolute w-full sm:right-0 z-40 mb-10 bg-white rounded-b-lg shadow-xl sm:ml-auto sm:max-w-xl top-full inset-x-0 sm:inset-x-auto sm:max-h-[80vh]" x-bind:class="!notifyOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
       <div class="px-clamp-gap sm:px-6">
