--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -15,9 +15,9 @@
         </p>
       </div>
       <div class="bg-gray-100 border-b relative border-gray-200 border-t max-h-[55vh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
-        <div class="sticky inset-x-0 top-0 h-3 -mb-4 bg-gradient-to-b from-gray-100 to-transparent"></div>
+        <div class="sticky inset-x-0 top-0 h-3 -mb-3 bg-gradient-to-b from-gray-100 to-transparent"></div>
         <div class="py-4 px-clamp-gap sm:p-6">
-          <h2 class="text-lg font-semibold">Varsler</h2>
+          <h2 class="text-xl font-semibold">Varsler</h2>
           <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
           <div class="grid gap-1 mt-2">
             {%- for task in notifications.myTasks -%}
@@ -65,7 +65,7 @@
             {%- endfor -%}
           </div>
         </div>
-        <div class="sticky inset-x-0 bottom-0 h-3 -mt-4 bg-gradient-to-t from-gray-100 to-transparent"></div>
+        <div class="sticky inset-x-0 bottom-0 h-3 bg-gradient-to-t from-gray-100 to-transparent"></div>
       </div>
       <div class="pb-2 px-clamp-gap sm:px-6">
         <div x-show="!newNotifications" class="border-t border-gray-200"></div>
