--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -1,27 +1,27 @@
 {# Notifications #}
 <aside class="grid grid-cols-layout">
   <div class="relative col-full sm:col-wide">
-    <div class="absolute w-full sm:right-0 z-40 mb-10 bg-white rounded-b-lg shadow-xl sm:ml-auto sm:max-w-xl top-full inset-x-0 sm:inset-x-auto sm:max-h-[80vh]" x-bind:class="!notifyOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
+    <div class="absolute w-full sm:right-0 z-40 mb-10 bg-white rounded-b-lg shadow-xl sm:ml-auto sm:max-w-xl top-full inset-x-0 sm:inset-x-auto md:max-h-[92vh]" x-bind:class="!notifyOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
       <div class="px-clamp-gap sm:px-6">
         <p class="grid pt-5 pb-4" x-on:click="newNotifications = !newNotifications">
           <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
           <span class="text-2xl font-semibold">Isac Norland</span>
         </p>
         <p class="border-t border-gray-200">
-          <a href="#" class="flex items-center gap-2 py-3 -mt-px text-lg text-blue-500 fine:hover:-mx-clamppx-clamp-gap fine:hover:px-clamp-gap sm:fine:hover:-mx-6 sm:fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+          <a href="#" class="flex items-center gap-2 py-3 -mt-px text-lg text-blue-500 -mx-clamp-gap px-clamp-gap sm:hover:-mx-6 sm:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
             {{ '/src/_includes/svg/icons/user.svg' | svgContents() | safe }}
             <span>Min side</span>
           </a>
         </p>
       </div>
-      <div class="bg-gray-100 border-b relative border-gray-200 border-t max-h-[55vh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
+      <div class="bg-gray-100 border-b relative border-gray-200 border-t max-h-[55dvh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
         <div class="sticky inset-x-0 top-0 h-3 -mb-3 bg-gradient-to-b from-gray-100 to-transparent"></div>
         <div class="py-4 px-clamp-gap sm:p-6">
           <h2 class="text-xl font-semibold">Varsler</h2>
           <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
           <div class="grid gap-1 mt-2">
             {%- for task in notifications.myTasks -%}
-              <a class="grid gap-1 py-3 bg-white rounded-lg px-clamp-gap fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+              <a class="grid gap-1 px-3.5 py-3 bg-white rounded-lg fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
                 <h3 class="text-lg font-semibold leading-snug">{{ task.title | safe }}</h3>
                 <p class="text-base opacity-80">{{ task.timestamp }}</p>
                 <div class="flex items-center justify-between mt-2">
@@ -42,7 +42,7 @@
           <h3 class="mt-6 text-sm tracking-wider uppercase opacity-80">Beskjeder</h3>
           <div class="grid gap-1 mt-2">
             {%- for message in notifications.myMessages -%}
-              <a class="py-3 bg-white rounded-md px-clamp-gap fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+              <a class="px-3.5 py-3 bg-white rounded-md fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
                 <div>
                   <h3 class="text-lg font-semibold leading-snug">{{ message.title | safe }}</h3>
                   <p class="text-base opacity-80">{{ message.timestamp }}</p>
@@ -69,7 +69,7 @@
       </div>
       <div class="pb-2 px-clamp-gap sm:px-6">
         <div x-show="!newNotifications" class="border-t border-gray-200"></div>
-        <a href="#" class="flex items-center gap-2 py-3 text-lg text-blue-500 fine:hover:-mx-clamppx-clamp-gap fine:hover:px-clamp-gap sm:fine:hover:-mx-6 sm:fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+        <a href="#" class="flex items-center gap-2 py-3 text-lg text-blue-500 -mx-clamp-gap px-clamp-gap sm:fine:hover:-mx-6 sm:fine:hover:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
           {{ '/src/_includes/svg/icons/logout.svg' | svgContents() | safe }}
           <span>Logg ut</span>
         </a>
