Lik layout for arbeidsgiver, samarbeidspartner og ettersendelseside

--- a/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
@@ -229,16 +229,15 @@ permalink: '/produktoversikt-arbeidsgiver/'
           <div x-show="count === 0" class="p-6 py-8 text-center overflow-hidden grid items-center leading-snug rounded-lg bg-gray-100 min-h-[4.75rem] md:col-span-6">
             <p class="max-w-prose">Ingen søknader eller skjema er merket med denne kombinasjonen av type og område.</p>
           </div>
-        </div>
 
-        <div class="p-4 bg-orange-100 rounded-lg md:col-start-1 md:px-6 md:py-5">
-          <h3 class="text-xl font-semibold">
-            Klage eller anke på vedtak?
-          </h3>
-          <p class="mt-2 max-w-prose">Hvis du har fått et vedtak fra NAV og du er uenig i vedtaket, har du rett til å klage eller anke.</p>
-          <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:no-underline fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
+          <div class="p-4 mt-8 bg-orange-100 rounded-lg md:px-6 md:py-5">
+            <h3 class="text-xl font-semibold">
+              Klage eller anke på vedtak?
+            </h3>
+            <p class="mt-2 max-w-prose">Hvis du har fått et vedtak fra NAV og du er uenig i vedtaket, har du rett til å klage eller anke.</p>
+            <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:no-underline fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
+          </div>
         </div>
-
       </div>
     </div>
   </main>
